Added left menu

--- a/index.html
+++ b/index.html
@@ -14,8 +14,95 @@
         <div class="top-bar__logo"></div>
         <button class="top-bar__button">Создать встречу</button>
       </div>
-      <div class="top-bar__scale">Scale</div>
+      <div class="top-bar__scale">
+        <div class="top-bar__scale__date">
+          <img
+            src="./assets/arrow2.svg"
+            class="top-bar__scale__date_left-arrow"
+          />
+          <p>14 Dec • Today</p>
+          <img
+            src="./assets/arrow.svg"
+            class="top-bar__scale__date_right-arrow"
+          />
+        </div>
+        <div class="top-bar__scale__timeline">
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+          <div class="hour">8:00</div>
+        </div>
+      </div>
       <div class="schedule">
+        <div class="schedule__rooms">
+          <div class="floor">
+            <div class="floor_num">7 Этаж</div>
+            <div class="room">
+              <p>Ржавый Фред</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room is_busy">
+              <p>Ведьмин дом</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Jack room</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room is_busy">
+              <p>Прачечная</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Желтый дом</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Оранжевый тюльпан</p>
+              <p>до 10 человек</p>
+            </div>
+          </div>
+          <div class="floor">
+            <div class="floor_num">6 Этаж</div>
+            <div class="room">
+              <p>Джокер</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Мариванна</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Тонкий Боб</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room is_busy">
+              <p>Черная Вдова</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Белорусский ликер</p>
+              <p>7-6 человек</p>
+            </div>
+            <div class="room">
+              <p>Человек паук</p>
+              <p>7-6 человек</p>
+            </div>
+          </div>
+        </div>
         <div class="schedule__timelapse">
           ssssssssssssssssssssssssssssssssss
         </div>
