added onscroll style change to schedule

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Яндекс Переговорки</title>
   </head>
   <body>
-    <div class="main-container">
+    <div id="main-container">
       <div class="top-bar__header">
         <div class="top-bar__logo"></div>
         <button class="top-bar__button">Создать встречу</button>
@@ -28,25 +28,24 @@
         </div>
         <div class="top-bar__scale__timeline">
           <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
-          <div class="hour">8:00</div>
+          <div class="hour">9</div>
+          <div class="hour">10</div>
+          <div class="hour">11</div>
+          <div class="hour">12</div>
+          <div class="hour">13</div>
+          <div class="hour">14</div>
+          <div class="hour">15</div>
+          <div class="hour">16</div>
+          <div class="hour">17</div>
+          <div class="hour">18</div>
+          <div class="hour">19</div>
+          <div class="hour">20</div>
+          <div class="hour">21</div>
+          <div class="hour">22</div>
+          <div class="hour">23</div>
         </div>
       </div>
-      <div class="schedule">
+      <div id="schedule">
         <div class="schedule__rooms">
           <div class="floor">
             <div class="floor_num">7 Этаж</div>
@@ -108,5 +107,6 @@
         </div>
       </div>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
