Eventually understood how to fix sticky problem and scrolling div visibility

--- a/index.html
+++ b/index.html
@@ -45,66 +45,100 @@
           <div class="hour">23</div>
         </div>
       </div>
-      <div id="schedule">
-        <div class="schedule__rooms">
-          <div class="floor">
-            <div class="floor_num">7 Этаж</div>
-            <div class="room">
-              <p>Ржавый Фред</p>
+      <!-- <div id="schedule"> -->
+      <div class="schedule__rooms">
+        <div class="floor">
+          <div class="floor_num">7 Этаж</div>
+          <div class="room">
+            <div>
+              <p>Зеленый Фред</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room is_busy">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room is_busy">
+            <div>
               <p>Ведьмин дом</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Jack room</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room is_busy">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room is_busy">
+            <div>
               <p>Прачечная</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Желтый дом</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Оранжевый тюльпан</p>
               <p>до 10 человек</p>
             </div>
+            <div class="schedule__timelapse"></div>
           </div>
-          <div class="floor">
-            <div class="floor_num">6 Этаж</div>
-            <div class="room">
+        </div>
+        <div class="floor">
+          <div class="floor_num">6 Этаж</div>
+          <div class="room">
+            <div>
               <p>Джокер</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Мариванна</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Тонкий Боб</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room is_busy">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room is_busy">
+            <div>
               <p>Черная Вдова</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Белорусский ликер</p>
               <p>7-6 человек</p>
             </div>
-            <div class="room">
+            <div class="schedule__timelapse"></div>
+          </div>
+          <div class="room">
+            <div>
               <p>Человек паук</p>
               <p>7-6 человек</p>
             </div>
+            <div class="schedule__timelapse"></div>
           </div>
+          <!-- </div> -->
         </div>
-        <div class="schedule__timelapse">
-          ssssssssssssssssssssssssssssssssss
-        </div>
+        <!-- <div class="schedule__timelapse"></div> -->
       </div>
     </div>
     <script src="scroll.js"></script>
